neural_coder_workspace/bench16615047496715925/performance.log
  File "/home2/longxin/Neural_Coder_EXT/tmp.py", line 398
    if not False: # [coder-enabled]
    ^
SyntaxError: invalid syntax
